# miBotNotificationRegister

./: .env.example  .gitignore  CLAUDE.md  README.md  bot.py  cct.json  database.py  datos_estudiante.json  migrate_db.py  migrate_to_v2.py  pyproject.toml  testU.ipynb
